Introduce EntityApi to manage entities on the api.ai platform.
Added EntityApi as well as EntityObject as DAO representation.
Added phpspec tests for checking object behavior.
Added Travis CI config file for github.

--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,14 @@
       "ApiAi\\": "src/"
     }
   },
+  "config": {
+    "bin-dir": "bin"
+  },
   "require": {
     "php": ">=5.5.0",
     "guzzlehttp/guzzle": "^6.2"
+  },
+  "require-dev": {
+    "phpspec/phpspec": "^3.0"
   }
 }
