--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_script:
     - travis_retry composer install --no-interaction --prefer-source --dev
 
 script:
-   - ./vendor/bin/phpspec run -f pretty
+   - ./bin/phpspec run -f pretty
